// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should call onSubmit prop for valid form submission 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render SkillForm correctly 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render SkillForm correctly with expense data 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render error for invalid form submission 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render error for invalid form submission 2`] = `
<div
  className="dv-form"
>
  <p
    className="form-error"
  >
    Please provide skill name and experience
  </p>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should set experience on select change 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;

exports[`Should set name on input change 1`] = `
<div
  className="dv-form"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="dv-input"
    >
      <input
        autoFocus={true}
        className="form-input"
        onChange={[Function]}
        placeholder="Node JS, Postgres, React, etc."
        type="text"
        value=""
      />
    </div>
    <div
      className="dv-select-button"
    >
      <select
        className="form-select"
        onChange={[Function]}
        value=""
      >
        <option
          disabled={true}
          selected={true}
          value=""
        >
          EXPERIENCE
        </option>
        <option
          value="< 1 year"
        >
          &lt; 1 year
        </option>
        <option
          value="1 - 3 years"
        >
          1 - 3 years
        </option>
        <option
          value="3 - 5 years"
        >
          3 - 5 years
        </option>
        <option
          value="5 - 7 years"
        >
          5 - 7 years
        </option>
        <option
          value="7+ years"
        >
          7+ years
        </option>
      </select>
      <button
        className="form-button"
      >
        ADD SKILL
      </button>
    </div>
  </form>
</div>
`;
